framework/images/webapp/images/ecommain.css
/* ===== This file contains the eCommerce specific styles ===== */

/* ===== Basic Element Styles ===== */
BODY {
background-color: #FFFFFF;
margin-top: 10px;
margin-right: 10px;
margin-bottom: 10px;
margin-left: 10px;
}

FORM {
margin: 0px;
}

UL {
margin-top: 0; 
margin-bottom: 0;
}


/* ===== Header Styles ===== */
#ecom-header {
position: relative;
background: #ffffff;
height: 75px;
voice-family: "\"}\"";
voice-family: inherit;
height: 75px;
/* border:1px solid #000; */
}
#ecom-header #left {
position: absolute;
top: 0px;
left: 0px;
width: 280px;
}
#ecom-header #middle {
margin-left: 290px;
margin-right: 210px;
padding-top: 10px;
width: auto;

text-align: center;
}
#ecom-header #right {
position: absolute;
top: 0px;
right: 0px;
width: 200px;
padding: 0px;
margin-top: 20px;

text-align: right;
}

#welcome-message {
padding-right: 10px;
padding-left: 10px;
font-family: Verdana, Arial, Helvetica, sans-serif;
font-size: 10px;
font-weight: bold;
text-decoration: none;
color: #000000;
}
#welcome-message a {
font-family: Verdana, Arial, Helvetica, sans-serif;
font-size: 10px;
font-weight: bold;
text-decoration: none;
color: #000099;
}
#welcome-message a:hover {
color: black;
text-decoration: underline;
}
#company-name {
margin: 0px;
font-size: 12pt;
font-family: Verdana, Arial, Helvetica, sans-serif;
font-weight: bold;
color: #000099;
white-space: nowrap;
}
#company-subtitle {
margin: 0px;
font-size: 6pt;
font-family: Verdana, Arial, Helvetica, sans-serif;
color: #330099;
white-space: nowrap;
}

#microcart {
font-size: 10px;
font-family: Verdana, Arial, Helvetica, sans-serif;
font-weight: bold;
text-decoration: none;
color: black;
}
#microcart a {
text-decoration: none;
color: #000099;
}
#microcart a:hover {
color: black;
text-decoration: underline;
}
#microcart .disabled {
color: #666666;
}

/* ===== Header-Bar Styles ===== */
#ecom-header-bar {
position: relative;
background: #B4B0AA;
text-align: center;
height: 14px;
voice-family: "\"}\"";
voice-family: inherit;
height: 14px;
}

#ecom-header-bar ul {
width: auto;
position: absolute;
display: block;
list-style: none;
background: transparent;
vertical-align: middle;
margin: 0px;
padding: 0px;
}
#ecom-header-bar ul#left-links {
top: 0;
left: 0;
}
#ecom-header-bar ul#right-links {
top: 0;
right: 0;
}

#ecom-header-bar ul li { 
height: 14px;
padding: 0px 8px 0px 8px;
}
#ecom-header-bar ul#left-links li {
float: left;
border-right: 1px solid #FFFFFF;
}
#ecom-header-bar ul#right-links li {
float: right;
border-left: 1px solid #FFFFFF;
}

#ecom-header-bar ul li a {
font-family: Verdana, Arial, Helvetica, sans-serif;
font-size: 10px;
font-weight: bold;
text-decoration: none;
color: #000099;
} 
#ecom-header-bar ul li:hover a {
color: black;
text-decoration: underline;
}



/* ===== Layout/Formatting Styles ===== */
/* ecom-mainarea wraps what is below the header including the divs for left, main, right columns as applicable */
DIV.ecom-mainarea {
background-color: #FFFFFF;
width: auto;
}

DIV.ecom-column-left {
position: absolute;
left: 10px;
top: 109px;
/* the old way: float: left; margin-right: 10px; */

width: 150px;
background: #ffffff;
/* border:1px solid #000; */
}
DIV.ecom-column-right {
position: absolute;
right: 10px;
top: 109px;
/* the old way: float: right; margin-left: 10px; */

width: 200px;
background: #ffffff;
}


DIV.ecom-column-main, DIV.ecom-column-main-leftonly, DIV.ecom-column-main-rightonly, DIV.ecom-nocolumns {
background:#fff;
text-align: left;
vertical-align: top;
margin-top: 10px;
}
DIV.ecom-column-main {
margin-left: 160px;
margin-right: 210px;
voice-family: "\"}\"";
voice-family: inherit;
margin-left: 161px;
margin-right: 211px;
}
DIV.ecom-column-main-leftonly {
margin-left: 160px;
voice-family: "\"}\"";
voice-family: inherit;
margin-left: 161px;
}
DIV.ecom-column-main-rightonly {
margin-right: 210px;
voice-family: "\"}\"";
voice-family: inherit;
margin-right: 211px;
}

DIV.ecom-endcolumns {
  clear: both;
  font-size: 4pt;
}  

/* ====== eCommerce "Screenlet" Styles ====== */
DIV.ecom-screenlet {
background-color: #FFFFFF;
border: 1px solid #999999;
margin-bottom: 10px;
}
DIV.ecom-screenlet-header {
background-color: #000099;
padding-top: 1px;
padding-bottom: 1px;
padding-right: 4px;
padding-left: 4px;
}
DIV.ecom-screenlet-body {
background-color: #FFFFFF;
padding: 4px;
}

.boxhead {
font-family: Verdana, Arial, Helvetica, sans-serif;
margin: 0px;
font-size: 8pt;
font-weight: bold;
text-decoration: none;
color: #FFFFFF;
}

A.boxheadbutton {
font-family: Verdana, Arial, Helvetica, sans-serif;
margin: 0px;
font-size: 8pt;
font-weight: bold;
text-decoration: none;
color: #FFFFFF;
}

A.boxheadbutton:hover {
font-family: Verdana, Arial, Helvetica, sans-serif;
margin: 0px;
font-size: 8pt;
font-weight: bold;
text-decoration: none;
color: red;
}

/* Form layout styles to simulate a table-style layout */
div.ecom-form-row {
clear: both;
padding-top: 2px;
}
div.ecom-form-label {
float: left;
width: 180px;
text-align: right;
padding-top: 5px;
}
div.ecom-form-field {
float: left;
margin-left: 10px;
text-align: left;
} 

/* ===== Text/Label Styles ===== */
.tabletext, div.ecom-form-label, div.ecom-form-field {
font-size: 10px;
text-decoration: none;
font-family: Verdana, Arial, Helvetica, sans-serif;
}

A.tabletext:hover {
font-size: 10px;
text-decoration: underline;
font-family: Verdana, Arial, Helvetica, sans-serif;
}

.tablebuttontext {
font-size: 10px;
color: #1E3C66;
font-family: Verdana, Arial, Helvetica, sans-serif;
}

.contenttext {
font-size: 8pt;
font-family: Verdana, Arial, Helvetica, sans-serif;
}

DIV.tabletexthidden {
font-size: 10px;
font-family: Verdana, Arial, Helvetica, sans-serif;
visibility: hidden;
}

.head1 {
font-family: Verdana, Arial, Helvetica, sans-serif;
margin: 0px; 
font-size: 12pt;
font-weight: bold;
color: #000099;
}

.head2 {
font-family: Verdana, Arial, Helvetica, sans-serif;
margin: 0px;
font-size: 10pt;
font-weight: bold;
color: #000000;
}
/* ... */

